# sigame

./: .gitmodules  CMakeLists.txt
assets/: layout.json  test_bad.siq  test_good.siq
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.h  common.h  log.h  window.cpp  window.h
src/app/core/: game.cpp  game.h  layout.cpp  layout.h
src/app/core/layout/: layout.cpp  layout.h  layout_common.h  main_menu.cpp  single_player.cpp
src/app/log/: log.cpp  log.h
src/app/utils/: zip.cpp  zip.h
